# versatile_audio_super_resolution

./: .gitignore  app.py  diffs  inference.py  optimize_model.py  pyproject.toml  requirements.txt
audiosr/: __init__.py  __main__.py  lowpass.py  pipeline.py  utils.py
audiosr/clap/open_clip/: factory.py  htsat.py  loss.py  model.py  pann_model.py  pretrained.py  timm_model.py  utils.py
audiosr/clap/training/: data.py
audiosr/hifigan/: __init__.py  models.py  models_v2.py
audiosr/latent_diffusion/: util.py
audiosr/latent_diffusion/models/: ddim.py  ddpm.py  plms.py
audiosr/latent_diffusion/modules/: attention.py
audiosr/latent_diffusion/modules/audiomae/: AudioMAE.py  models_mae.py  models_vit.py
audiosr/latent_diffusion/modules/audiomae/util/: patch_embed.py  pos_embed.py  stat.py
audiosr/latent_diffusion/modules/diffusionmodules/: model.py  openaimodel.py  util.py
audiosr/latent_diffusion/modules/encoders/: modules.py
audiosr/latent_diffusion/modules/phoneme_encoder/: attentions.py  commons.py  encoder.py
audiosr/latent_diffusion/modules/phoneme_encoder/text/: __init__.py  cleaners.py
audiosr/latent_encoder/: autoencoder.py
audiosr/utilities/: __init__.py  sampler.py  tools.py
audiosr/utilities/audio/: audio_processing.py  stft.py  tools.py
audiosr/utilities/data/: add_on.py  dataset.py
example/lsd_calculation_pitfall/: demo_comparison.py
scripts/: optimize_model.py
tests/: test_pipeline_lowpass.py
