[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audiosr"
version = "0.0.7"
description = "This package is written for text-to-audio/music generation."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.0.1",
    "torchaudio>=2.0.2",
    "torchvision>=0.15.2",
    "tqdm",
    "gradio",
    "pyyaml",
    "einops",
    "chardet",
    "numpy",
    "soundfile",
    "librosa",
    "scipy",
    "pandas",
    "unidecode",
    "phonemizer",
    "torchlibrosa>=0.0.9",
    "transformers>=4.30.2",
    "huggingface_hub",
    "progressbar",
    "ftfy",
    "timm",
    "matplotlib",
    "diffusers",
]


[dependency-groups]
dev = [
"ruff>=0.1.0", "ty>=0.0.1"
]

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers.git" }

[project.optional-dependencies]
dev = ["ruff>=0.1.0", "ty>=0.0.1"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "F401", "F841"]
